Change the boxes to look closer to the spec, change the font and the sizing, add the background image and resize it to the second content box, and fix the lets cook button by removing the border and adjust the spacing and the size

--- a/styles.css
+++ b/styles.css
@@ -27,25 +27,48 @@ nav {
     padding: 13px 10px 10px 10px;
     margin-left: 10px;
 }
+
 section {
     display: flex;
     justify-content: space-evenly;
 }
 
 article {
+    margin-top: 10%;
     background-color: rgba(225, 225, 225, .9);
-    height: 500px;
-    width: 500px;
+    height: 260px;
+    width: 350px;
+    padding: 3%;
 }
 
-.choice-box {
+.choice-box-title {
+    font-family: 'Roboto', sans-serif;
+    font-size: 1.28em;
     display: flex;
     justify-content: space-evenly;
+    margin-left: 3%;
+    margin-bottom: 6%;
+    
+}
+
+.choice-box-radio {
+    margin-bottom: 7%;
+}
+
+ul {
+    padding-left: 6%;
 }
 .choice-box-button {
+    font-family: 'Roboto', sans-serif;
     background-color: #0fb9b1;
-    border-color: #0fb9b1;
+    border : none;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    padding-left: 4px;
+    padding-right: 4px;
     border-radius: 5px;
+    margin-left: 5%;
+    width: 50%;
 }
 
 .cook-box {
